# version-dict

./: .cspell.json  .editorconfig  .env  Changelog.md  README.md  discussion.md  pyproject.toml  test.py  tst01.py  versions.toml  xpaths001.json
files/: 001example.json  002example.json  2022-02-07.json  2022-02-08.json  2022-02-09.json  xpaths002.json
tests/: conftest.py  test_project_toml_file.py  test_version_dict.py  test_version_set.py
version_dict/: __init__.py  main.py
