[tool.poetry]
name = "version-dict"
version = "0.1.0"
description = "Create a dictionary from file(s) depending on version"
authors = ["Bernd Prager <bernd@prager.ws>"]

[tool.poetry.dependencies]
python = "^3.8"
pep508-parser = "^2019.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
