[tool.poetry]
name = "version-dict"
version = "0.1.0"
description = "Create a dictionary from file(s) depending on version"
authors = ["Bernd Prager <bernd@prager.ws>"]

[tool.poetry.dependencies]
python = "^3.8"
pep508-parser = "^2019.3"
toml = "^0.10.2"
pep508 = "^0.1"
packaging = "^21.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
