[tool.poetry]
name = "version-dict"
version = "0.1.1"
description = "Create a dictionary from file(s) depending on version"
authors = ["Bernd Prager <bernd@prager.ws>"]

[tool.poetry.dependencies]
python = "3.8"
toml = "^0.10.2"
packaging = "^21.2"
python-dotenv = "^0.19.2"
Appium-Python-Client = "^2.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
